# CriptoML

./: .env.example  .gitignore  README.md  pyproject.toml
configs/backtest/: daily_default.yaml
configs/data/: binance_daily.yaml
configs/strategy/: v0_baseline.yaml  v1_ridge.yaml  v1_ridge_ls.yaml  v1_ridge_ls_aggro.yaml  v1_ridge_ls_conservative.yaml  v1_ridge_raw.yaml  v2a_momentum_funding.yaml  v2b_carry_mix.yaml  v2c_carry_contra.yaml
data/processed/universe/: binance_v0a_latest.csv
data/processed/universe/v0b/: universe_2019-11-01.csv  universe_2019-12-01.csv  universe_2020-01-01.csv  universe_2020-02-01.csv  universe_2020-03-01.csv  universe_2020-04-01.csv  universe_2020-05-01.csv  universe_2020-06-01.csv  universe_2020-07-01.csv  universe_2020-08-01.csv  universe_2020-09-01.csv  universe_2020-10-01.csv  universe_2020-11-01.csv  universe_2020-12-01.csv  universe_2021-01-01.csv  universe_2021-02-01.csv  universe_2021-03-01.csv  (+53 more)
docs/: ROADMAP_V2.md  roadmap.md  v1_subperiods.md  v2_plan.md
experiments/v0_baseline_momentum/20251125_022339/: equity_curve.csv  metrics.json
scripts/: analyze_ridge_coefs.py  evaluate_predictions.py  plot_equity.py  run_backtest.py  run_grid.py  train_v1.py
scripts/etl/: binance_futures.py
src/crypto_alpha/: __init__.py  config.py
src/crypto_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crypto_alpha/backtest/: engine.py  portfolio.py
src/crypto_alpha/data/: __init__.py  loaders.py  universe.py
src/crypto_alpha/features/: volatility.py
src/crypto_alpha/models/: __init__.py  ridge.py
(+302 files in other folders)
