[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-alpha"
version = "0.0.1"
description = "Research framework for adaptive neutral-carry alpha in crypto"
authors = [
  { name = "CriptoML Research" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "tqdm>=4.65",
  "plotly>=5.0",
  "ccxt>=4.0",
  "pyarrow>=13.0",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "black",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]
